src/shared/adjusters/css/style.css
.preference {
    margin-left: 45px;
    /*font-family: 'Roboto Slab', serif;*/
    font-family: 'Open Sans', sans-serif;
}

.gpii-punctuationVerbosity-description {
    font-size: 15px;
}

.gpii-screenReaderBrailleOutput-description {
    font-size: 15px;
}

#surrounding-div {
    border: 3px solid black;
    width: 700px;
    position: relative;
    text-align: left;
}

#prompt-message {
    display:none;
    background: url('../images/balloon-empty.png') no-repeat;
    text-align: center;
    height: 25px;
    width: auto;
    padding-left: 6px;
    padding-right: 6px;
    background-size: 100% 100%;
    position: fixed;
    top: 55px;
    margin-left: 262px;
    cursor: pointer;
}

.gpii-addOrRemovePreference-label {
    display: none;
    color:transparent;
}

#speech-rate {
    display: none;
}

#speechRate {
    text-align: center;
    border: none;
    width: 200px;
    font-size: 23px;
}

#speechRateMinus {
    font-size: 50px;
}

#speechRatePlus {
    font-size: 30px;
    font-weight: bold;
}

textarea:focus, input:focus{
    outline: 0;
}

.more-options {
    cursor:pointer;
    display: none;
    font-size: 15px;
    font-weight: bold;
    margin-left: 100px;
}

#expanded-top {
    display: none;
}

#expanded-bottom {
    display: none;
}

.switch {
    font-size:135%;
    float: left;
}

#screen-reader-onoff {
    font-size:70%;
    float:left;
    margin-left:30px;
}

#braille-onoff {
    font-size:70%;
    float:left;
    margin-left:125px;
}

input[type="radio"] {
    display:none;
}

input[type="radio"] + label.radioButton-left {
    background: url('../images/radioButton-leftOff.png') no-repeat;
    width: auto;
    height: auto;
    position: absolute;
    font-size: 15px;
    line-height: 30px;
    padding-top: 25px;
    padding-right: 40px;
    vertical-align: center;
}

input[type="radio"]:checked + label.radioButton-left {
    background: url('../images/radioButton-leftOn.png') no-repeat;
}

input[type="radio"] + label.radioButton-middle {
    background: url('../images/radioButton-middleOff.png') no-repeat;
    width: auto;
    height: auto;
    position: relative;
    display:inline-block;
    font-size: 15px;
    padding-top: 31px;
    padding-right: 10px;
    padding-left: 10px;
}

input[type="radio"] + label.radioButton-second {
    margin-left: 40px;
}

input[type="radio"] + label.radioButton-third {
    padding-left: 15px;
    margin-left: -5px;
}

input[type="radio"]:checked + label.radioButton-middle {
    background: url('../images/radioButton-middleOn.png') no-repeat;
}

input[type="radio"] + label.radioButton-right {
    background: url('../images/radioButton-rightOff.png') no-repeat;
    width: auto;
    height: auto;
    position: absolute;
    font-size: 15px;
    display:inline-block;
    line-height: 30px;
    padding-top: 25px;
    padding-right: 29px;
    padding-left: 22px;
    vertical-align: center;
}

input[type="radio"]:checked + label.radioButton-right {
    background: url('../images/radioButton-rightOn.png') no-repeat;
}

select {
    padding:4px;
    margin: 0;
    -webkit-border-radius:4px;
    -moz-border-radius:4px;
    border-radius:5px;
    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
    box-shadow: 3px 3px 3px #C4C7C7, 0 0 #fff inset;
    background: #fff;
    color:#404042;
    border:4px;
    border-style:solid;
    border-color:#ff4400;
    display: inline-block;
    -webkit-appearance:none;
    -moz-appearance:none;
    appearance:none;
    cursor:pointer;
}

html{
    background:#ECEFEF;
}

input[type=checkbox] {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + label.pref-checkbox-label {
    background: url('../images/star-dark.png') no-repeat;
    height: 21px;
    width: 21px;
    background-size:21px 21px;
    position: absolute;
    margin-left: 329px;
    cursor: pointer;
}

input[type=checkbox]:checked + label.pref-checkbox-label {
    background: url('../images/star-light.png') no-repeat;
    height: 21px;
    width: 21px;
    background-size:21px 21px;
    position: absolute;
    margin-left: 329px;
    cursor: pointer;
}

input[type=checkbox] + label.main-checkbox-label {
    background: url('../images/speakTextOff.png') no-repeat;
    background-size:350px 90px;
    padding-left:30px;
    cursor:pointer;
    font-size: 23px;
    text-align: center;
    padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:350px;
}

input[type=checkbox]:checked + label.main-checkbox-label {
    background: url('../images/speakTextOn.png') no-repeat;
    background-size:350px 90px;
    padding-left:30px;
    cursor:pointer;
    font-size: 23px;
    font-weight:bold;
    text-align: center;
    padding-left: 3px;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:350px;
}

input[type=checkbox] + label.checkbox-label {
    background: url('../images/checkboxOff.png') no-repeat;
    background-size:20px 20px;
    padding-left:30px;
    cursor:pointer;
    font-size: 15px;
    display:inline-block;
    line-height:24px;
    width: 250px;
    vertical-align: center;
}

input[type=checkbox] + label.long-lined-label {
    line-height: 20px;
}

input[type=checkbox]:checked + label.checkbox-label {
    background: url('../images/checkboxOn.png') no-repeat;
    background-size:20px 20px;
    padding-left:30px;
    cursor:pointer;
    width: 250px;
}

body {
    -webkit-user-select: none;
}

.fl-uiOptions .fl-uiOptions-onoff .fl-uiOptions-switch {
    border-radius:50px;
    border: 1px solid #D7DCDD;
    width: 5em;
    height: 2em;
    background-color: #FFFFFF;
    box-shadow: 1em 1.1em 0 0 rgba(250,250,250,0.53) inset;
    overflow:hidden;
    vertical-align: middle;
    display:inline-block;
    transition-duration: 0.2s;
    transition-property: padding-left, width, background-color, margin-left;
    font-size: 1.1em;
    font-weight: 700;
}

.fl-uiOptions .fl-uiOptions-onoff input {
    border: 0 none;
    clip: rect(0px, 0px, 0px, 0px);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.fl-uiOptions .fl-uiOptions-onoff input:focus + label {
    outline: 1px solid black;
}

.fl-uiOptions .fl-uiOptions-onoff input:checked + label .fl-uiOptions-switch {
    padding-left: 3em;
    width: 2em;
    background-color: rgb(23, 169, 184);
    box-shadow: -1em 1.1em 0.1em 0 rgba(172, 216, 92, 0.00) inset;
}

.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOn]:before {
    content: attr(data-checkboxStateOn);
}
.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOff]:after {
    content: attr(data-checkboxStateOff);
}

.fl-uiOptions .fl-uiOptions-onoff input + label .fl-uiOptions-switch:before {
    color: #fff;
    border: 1px solid rgb(0, 55, 85);
    border-radius: 150px;
    float:left;
    width:1.9em;
    height: 1.9em; /* Width and height of the knob. */
    text-indent:-2.07em;
    line-height:1.9em;
    text-shadow: 1px 1px 1px #000;
    background-color: #fff;
    background-image: -o-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
    background-image: -moz-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
    background-image: -webkit-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
    background-image: -ms-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
    background-image: -webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0, rgb(205,204,202)),
        color-stop(1, rgb(244,244,244))
    );
    background-image: linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
    box-shadow: 0.1em 0.1em 0.0em #444;
}

.fl-uiOptions .fl-uiOptions-onoff input + label .fl-uiOptions-switch:after {
    float:left;
    position:relative;
    top: -0.76em;
    left: 0.5em;
}

.fl-uiOptions .fl-uiOptions-onoff .fl-uiOptions-switch-inner {
    border: 0.1px solid #493A30;
    border-radius: 50px;
    width: 0.9em;
    height: 0.9em;
    position:relative;
    left:-1.45em;
    top:0.52em;

    background-color: #617796;
    box-shadow: 0 -0.2em 0.3em 0.05em rgba(250, 250, 250, 0.3) inset;

    display:inline-block;
}

.fl-uiOptions .fl-uiOptions-onoff input:checked + label .fl-uiOptions-switch .fl-uiOptions-switch-inner {
    top:-1.5em;
    left: 0.56em;
}

.fl-uiOptions label {
    text-transform: none;
    font-size: 1.2em;
}

